--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,4 +1,8 @@
+
+$dark-gray: #282c34;
+
 body {
+  background-color: $dark-gray;
   height: 100vh;
   max-height: 100vh;
   margin: 0;
